--- a/test1.html
+++ b/test1.html
@@ -27,6 +27,126 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"/>
 
+
+<style>
+
+
+
+
+/* ---------- Strong in-page override (use as-is) ---------- */
+
+/* Closed select: dark background, white selected value */
+select#country-code,
+select.country-select,
+select.form-select,
+select {
+  background-color: #0f1724 !important;
+  color: #000 !important;
+  -webkit-text-fill-color: #000 !important; /* Safari */
+  border: 1px solid rgba(255,255,255,0.12) !important;
+  padding: 0.45rem 0.75rem !important;
+  border-radius: 8px !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+}
+
+/* Dropdown options: light background, dark text (CSS attempt) */
+select#country-code option,
+select.country-select option,
+select.form-select option,
+select option {
+  background-color: #000 !important;
+  color: #111111 !important;
+}
+
+/* Focus outline for accessibility */
+select#country-code:focus,
+select.country-select:focus,
+select.form-select:focus,
+select:focus {
+  outline: 3px solid rgba(99,102,241,0.14) !important;
+  outline-offset: 2px !important;
+}
+
+/* Hide MS expand arrow if using custom arrow */
+select::-ms-expand { display: none !important; }
+
+/* Small-screen tweak */
+@media (max-width: 480px) {
+  select#country-code,
+  select.country-select,
+  select.form-select,
+  select {
+    font-size: 15px !important;
+    padding-right: 2rem !important;
+  }
+}
+
+/* ---------- Submit button override (in-page) ---------- */
+/* Replace selectors with your button's class or keep generic button[type="submit"] */
+button[type="submit"],
+button.btn-submit,
+input[type="submit"] {
+  background: linear-gradient(90deg,#0ea5a4 0%,#06b6d4 100%) !important;
+  color: #ffffff !important;
+  border: none !important;
+  padding: 0.75rem 1.25rem !important;
+  font-weight: 600 !important;
+  border-radius: 10px !important;
+  box-shadow: 0 6px 18px rgba(6,182,212,0.18) !important;
+  cursor: pointer !important;
+  transition: transform 120ms ease, box-shadow 120ms ease, opacity 120ms ease !important;
+}
+
+/* Hover / active states */
+button[type="submit"]:hover,
+button.btn-submit:hover,
+input[type="submit"]:hover {
+  transform: translateY(-2px) !important;
+  box-shadow: 0 10px 24px rgba(6,182,212,0.22) !important;
+}
+
+button[type="submit"]:active,
+button.btn-submit:active,
+input[type="submit"]:active {
+  transform: translateY(0) !important;
+  box-shadow: 0 6px 12px rgba(6,182,212,0.14) !important;
+}
+
+/* Disabled state */
+button[type="submit"][disabled],
+button.btn-submit[disabled],
+input[type="submit"][disabled] {
+  opacity: 0.55 !important;
+  cursor: not-allowed !important;
+  box-shadow: none !important;
+  transform: none !important;
+}
+
+/* ---------- Small-screen tweaks ---------- */
+@media (max-width: 480px) {
+  select#country-code,
+  select.country-select,
+  select.form-select,
+  select {
+    padding-right: 2.25rem !important; /* leave space for native arrow */
+    font-size: 15px !important;
+  }
+
+  button[type="submit"],
+  button.btn-submit,
+  input[type="submit"] {
+    width: 100% !important;
+    padding: 0.85rem 1rem !important;
+  }
+}
+</style>
+
+
+
+
+
 </head>
 <body>
 
@@ -546,6 +666,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     });
 </script>
 
+
+
+<script> /* JS fallback: force inline styles on options when the select is opened. This helps on browsers that ignore CSS rules for <option>. */ (function() { var selector = 'select#country-code, select.country-select, select.form-select, select'; function styleOptions(sel) { try { var opts = sel.options; for (var i = 0; i < opts.length; i++) { opts[i].style.backgroundColor = '#ffffff'; opts[i].style.color = '#111111'; } } catch (e) { // Some browsers restrict option styling; ignore errors. } } function onOpen(e) { styleOptions(e.currentTarget); // For some mobile/native pickers, reapply after a short delay setTimeout(function(){ styleOptions(e.currentTarget); }, 50); } function attach() { var selects = document.querySelectorAll(selector); selects.forEach(function(sel) { // apply once on load styleOptions(sel); // apply when user opens the native dropdown sel.addEventListener('mousedown', onOpen, {passive:true}); sel.addEventListener('touchstart', onOpen, {passive:true}); sel.addEventListener('focus', onOpen, {passive:true}); // also reapply if options change dynamically var mo = new MutationObserver(function() { styleOptions(sel); }); mo.observe(sel, { childList: true, subtree: true }); }); } if (document.readyState === 'loading') { document.addEventListener('DOMContentLoaded', attach); } else { attach(); } })(); </script>
 
 
 
