--- a/landing-3.html
+++ b/landing-3.html
@@ -213,16 +213,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <script>
                     const products = [
-                        { name: "Modern Doors", img: "assets/images/modern door.jpg" },
-                        { name: "TV Wall", img: "assets/images/tv-wall.jpg" },
-                        { name: "Kitchen", img: "assets/images/kitchen.jpg" },
                         { name: "Walk-in Closets", img: "assets/images/closets.jpg" },
-                        { name: "Partition", img: "assets/images/partition.jpg" },
-                        { name: "Dressing Room", img: "assets/images/dressing-area.jpg" },
+                        { name: "Kitchen", img: "assets/images/kitchen.jpg" },
+                        { name: "TV Wall", img: "assets/images/tv-wall.jpg" },
                         { name: "Bed Panel", img: "assets/images/bed-panel.jpg" },
+                        { name: "Dressing Area", img: "assets/images/dressing-area.jpg" },
                         { name: "Wall Panel", img: "assets/images/wall-panel.jpg" },
-                        { name: "Wall Cladding", img: "assets/images/wall-cladding.jpg" },
-                        { name: "Welcome Unit", img: "assets/images/welcome-unit.jpg" }
+                        { name: "Modern Doors", img: "assets/images/modern door.jpg" },
+                        { name: "Vanity", img: "assets/images/modern door.jpg" },
+                        
+                        
+                        // { name: "Partition", img: "assets/images/partition.jpg" },                        
+                        // { name: "Wall Cladding", img: "assets/images/wall-cladding.jpg" },
+                        // { name: "Welcome Unit", img: "assets/images/welcome-unit.jpg" }
+
                     ];
 
                     document.write(products.map(p => `
