--- a/landing-3.html
+++ b/landing-3.html
@@ -507,12 +507,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- products section ends -->
 
-
     <footer class="py-8 bg-black text-center text-gray-600 text-[10px] border-t border-white/5 footer-safe-zone">
     <p>© 2026 Theyyampattil Furniture Trading LLC.</p>
 </footer>
 
-    <a href="tel:+971559132200" class="fixed bottom-6 right-6 z-[100] bg-[#c5a367] text-black p-4 rounded-full shadow-2xl pulse-btn hover:scale-110 transition-transform">
+
+<a href="https://wa.me/971559132200?text=Hello%2C%20I%20am%20interested%20in%20your%20luxury%20custom%20furniture.%20Please%20provide%20more%20details." target="_blank" class="whatsapp-btn pulse-green" aria-label="Chat on WhatsApp">
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.148-.67-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.938 3.659 1.432 5.628 1.433h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
+    </svg>
+</a>
+
+
+
+
+    <a href="tel:+971559132200" class="fixed bottom-[100px] right-6 z-[100] bg-[#c5a367] text-black p-4 rounded-full shadow-2xl pulse-btn hover:scale-110 transition-transform">
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
     </a>
 
@@ -621,6 +630,59 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
     .sp-text p { font-size: 12px; }
   }
+
+/* fixed whatsapp button styling */
+/* WhatsApp Floating Button Styling */
+.whatsapp-btn {
+    position: fixed;
+    bottom: 24px; /* Increased from 85px for more vertical space */
+    right: 24px;
+    z-index: 100;
+    background-color: #25d366;
+    color: white;
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease;
+}
+
+.whatsapp-btn svg {
+    width: 32px;
+    height: 32px;
+    fill: currentColor;
+}
+
+.whatsapp-btn:hover {
+    transform: scale(1.1);
+}
+
+/* Green Pulse Animation */
+@keyframes pulse-green {
+    0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
+    70% { box-shadow: 0 0 0 15px rgba(37, 211, 102, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
+}
+
+.pulse-green {
+    animation: pulse-green 2s infinite;
+}
+
+/* Mobile Adjustment */
+@media (max-width: 480px) {
+    .whatsapp-btn {
+        /* Adjusted to stay well above the call button and social proof on mobile */
+        bottom: 160px; 
+        right: 20px;
+        width: 50px;
+        height: 50px;
+    }
+}
+
+  
 </style>
 
 <script>
